bump version v0.19.1; fixed header alignment (align center for h1; left for h<=h2)

--- a/jupyterthemes/layout/cells.less
+++ b/jupyterthemes/layout/cells.less
@@ -526,7 +526,6 @@ div.rendered_html h5 {
 .text_cell_render h2 {
     color: @header-fg;
     font-size: 170%;
-    text-align: center;
     font-style: normal;
     font-weight: normal;
 }
@@ -534,7 +533,6 @@ div.rendered_html h5 {
 .text_cell_render h3 {
     color: @header-fg;
     font-size: 140%;
-    text-align: center;
     font-style: normal;
     font-weight: normal;
 }
@@ -542,7 +540,6 @@ div.rendered_html h5 {
 .text_cell_render h4 {
     color: @header-fg;
     font-size: 110%;
-    text-align: center;
     font-style: normal;
     font-weight: normal;
 }
@@ -550,7 +547,6 @@ div.rendered_html h5 {
 .text_cell_render h5 {
     color: @header-fg;
     font-size: 100%;
-    text-align: center;
     font-style: normal;
     font-weight: normal;
 }
